# Check-Syntax-C-

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  demo_sample.cpp  main.cpp  result.json  suggest_engine.cpp  suggest_engine.h  test.c  trie.cpp  trie.h
Diagnostic/: DiagnosticReporter.cpp  DiagnosticReporter.h  DiagnosticsJSON.h
Trie/: fuzzy_search.cpp  fuzzy_search.h  trie.cpp  trie.h
UI/: CodeEditor.cpp  CodeEditor.h  Main.cpp  MainWindow.cpp  MainWindow.h  SuggestionWidget.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  UI.cpp  UI.h  cCompilerIDE.pro
lexer/: Lexer.cpp  Lexer.h  Token.h
parser/: EBND.txt  Parser.cpp  Parser.h  Parser_AST.cpp  Parser_AST.h  Parser_void.cpp  semantics.cpp  semantics.h
preprocessor/: preprocessor.cpp  preprocessor.h
symboltable/: symboltable.cpp  symboltable.h  type.h
